--- a/Tasks/February/Week4/Login&Reg23Feb/code/login.html
+++ b/Tasks/February/Week4/Login&Reg23Feb/code/login.html
@@ -15,7 +15,7 @@
         <form action="#">
             <label  for=""><span> UserName:</span></label><br><input placeholder="enter your username" type="text" minlength="3" required><br>
             <label  for=""><span> Password:</span></label><br><input placeholder="enter your Password" type="password" minlength="8" required><br>
-            <input class="btn" type="submit" value="Submit">
+            <input class="btn" type="submit" value="Login">
 
         </form>
     </div>
