--- a/Tasks/February/Week4/Login&Reg23Feb/code/Registration.html
+++ b/Tasks/February/Week4/Login&Reg23Feb/code/Registration.html
@@ -29,7 +29,7 @@
                     <label for="">Confirm:</label><br><input type="password" placeholder="confirm your password" minlength="8" required>
                 </div>
             </div>
-            <input id="btn" type="submit" value="Submit">
+            <input id="btn" type="submit" value="Register">
         </form>
         <input type="checkbox"><span >I have read and accept the condition posted on the website <a href="">www.sample.com</a> <br> I confirm the relevance of all provided personal data and agree to their </span>
     </div>
