--- a/Tasks/March/Week1/Assignment-2/SumOfNumber/Code/index.html
+++ b/Tasks/March/Week1/Assignment-2/SumOfNumber/Code/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>
-            Addition
+            Addition jhj
         </title>
         <link rel="icon" href="./../images/plus.png">
         <link rel="stylesheet" href="./index.css">
