--- a/Tasks/March/Week1/Assignmet -3/LikeDislike/Code/index.html
+++ b/Tasks/March/Week1/Assignmet -3/LikeDislike/Code/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>
-
+   <title>
+        Images Gallary
     </title>
+    <link rel="icon" href="./../Image/Stuck at Home - Small Plant 4.png">
     <link rel="stylesheet" href="./index.css">
 </head>
 
