--- a/Tasks/March/Week2/Assignment-3/TodoWithJs/Code/index.html
+++ b/Tasks/March/Week2/Assignment-3/TodoWithJs/Code/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>TO-DO App Structure</title>
+    <title>Todo App</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../Images/to-do-list.png">
