--- a/Tasks/March/Week2/Assignment-3/TodoWithJs/Code/index.html
+++ b/Tasks/March/Week2/Assignment-3/TodoWithJs/Code/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <h2 style="color: rgb(183, 191, 199); background-color: #501810;">Assignment Submitted By <span
-        style="color: rgb(255, 255, 255); background-color: #501810;;">M.ShahMukit.A</span> on 09 March 2022</h2>
+        style="color: rgb(255, 255, 255); background-color: #501810;">M.ShahMukit.A</span> on 09 March 2022</h2>
     
     <!-- here are js file -->
     <script src="./js.js"></script>
